--- a/ProniaBackEnd/Views/Product/Detail.cshtml
+++ b/ProniaBackEnd/Views/Product/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model Product 
+@model DetailVM
 <!-- Begin Main Content Area  -->
 <main class="main-content">
     <div class="breadcrumb-area breadcrumb-height"
@@ -26,47 +26,36 @@
                     <div class="single-product-img">
                         <div class="swiper-container single-product-slider">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <a href="~/assets/images/website-images/@Model.Image"
-                                       class="single-img gallery-popup">
-                                        <img
-                                            class="img-full"
-                                             src="~/assets/images/website-images/@Model.Image"
-                                             alt="Product Image" />
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="~/assets/images/website-images/1-2-570x633.jpg"
-                                       class="single-img gallery-popup">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-2-570x633.jpg"
-                                             alt="Product Image" />
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="~/assets/images/website-images/1-3-570x633.jpg"
-                                       class="single-img gallery-popup">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-3-570x633.jpg"
-                                             alt="Product Image" />
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="~/assets/images/website-images/1-4-570x633.jpg"
-                                       class="single-img gallery-popup">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-4-570x633.jpg"
-                                             alt="Product Image" />
-                                    </a>
-                                </div>
+
+                                @foreach (ProductImage pImage in Model.Product.ProductImages.OrderByDescending(pi=>pi.IsPrimary))
+                                {
+                                    <div class="swiper-slide">
+                                        <a href="~/assets/images/website-images/@pImage.Url"
+                                           class="single-img gallery-popup">
+                                            <img class="img-full"
+                                                 src="~/assets/images/website-images/@pImage.Url"
+                                                 alt="@pImage.Alternative" />
+                                        </a>
+                                    </div>
+                                }
                             </div>
                         </div>
                         <div class="thumbs-arrow-holder">
                             <div class="swiper-container single-product-thumbs">
                                 <div class="swiper-wrapper">
+
+                                    @foreach (ProductImage pImage in Model.Product.ProductImages.OrderByDescending(pi=>pi.IsPrimary))
+                                    {
+                                        <a href="#" class="swiper-slide">
+                                            <img class="img-full"
+                                                 src="~/assets/images/website-images/@pImage.Url"
+                                                 alt="@pImage.Alternative" />
+                                        </a>
+                                    }
+
                                     <a href="#" class="swiper-slide">
                                         <img class="img-full"
-                                             src="~/assets/images/website-images/@Model.Image"
+                                             src="~/assets/images/website-images/@Model.Product.Image"
                                              alt="Product Thumnail" />
                                     </a>
                                     <a href="#" class="swiper-slide">
@@ -84,6 +73,7 @@
                                              src="~/assets/images/website-images/1-4-570x633.jpg"
                                              alt="Product Thumnail" />
                                     </a>
+
                                 </div>
                                 <!-- Add Arrows -->
                                 <div class="thumbs-button-wrap d-none d-md-block">
@@ -100,10 +90,11 @@
                 </div>
                 <div class="col-lg-6 pt-5 pt-lg-0">
                     <div class="single-product-content">
-                        <h2 class="title">@Model.Name</h2>
+
+                        <h2 class="title">@Model.Product.Name</h2>
                         <div class="price-box">
-                            <span class="new-price">$@Model.Price</span>
-                        </div>
+                            <span class="new-price">$@Model.Product.Price</span>
+                       
                         <div class="rating-box-wrap">
                             <div class="rating-box">
                                 <ul>
@@ -121,22 +112,28 @@
                         <div class="selector-wrap color-option">
                             <span class="selector-title border-bottom-0">Color</span>
                             <select class="nice-select wide border-bottom-0 rounded-0">
-                                <option value="default">Black & White</option>
-                                <option value="blue">Blue</option>
-                                <option value="green">Green</option>
-                                <option value="red">Red</option>
+
+                                @foreach (ProductColor pColor in Model.Product.ProductColors)
+                                {
+                                    <option value="@pColor.Color.Name">@pColor.Color.Name</option>
+                                }
+
                             </select>
                         </div>
                         <div class="selector-wrap size-option">
                             <span class="selector-title">Size</span>
                             <select class="nice-select wide rounded-0">
-                                <option value="medium">Medium Size & Poot</option>
-                                <option value="large">Large Size With Poot</option>
-                                <option value="small">Small Size With Poot</option>
+
+                                @foreach (ProductSize pSize in Model.Product.ProductSizes)
+                                {
+                                    <option value="@pSize.Size.Name">@pSize.Size.Name</option>
+                                }
                             </select>
                         </div>
                         <p class="short-desc">
-                            @Model.Description
+                            @Model.Product.Description
+                        </p>
+                        </div>
                         </p>
                         <ul class="quantity-with-btn">
                             <li class="quantity">
@@ -203,7 +200,9 @@
                             <span class="title">SKU:</span>
                             <ul>
                                 <li>
-                                    <a href="#">@Model.SKU</a>
+
+                                    <a href="#">@Model.Product.SKU</a>
+
                                 </li>
                             </ul>
                         </div>
@@ -211,16 +210,27 @@
                             <span class="title">Category :</span>
                             <ul>
                                 <li>
-                                    <a href="#">@Model.Category.Name</a>
+
+                                    <a href="#">@Model.Product.Category.Name</a>
+
                                 </li>
                             </ul>
                         </div>
                         <div class="product-category product-tags">
                             <span class="title">Tags :</span>
                             <ul>
+
+                                @foreach (ProductTag pTag in Model.Product.ProductTags)
+                                {
+                                    <li>
+                                        <a href="#">@pTag.Tag.Name@(pTag!=Model.Product.ProductTags[Model.Product.ProductTags.Count-1]?",":"")</a>
+                                    </li>
+                                }
+
                                 <li>
                                     <a href="#">Furniture</a>
                                 </li>
+
                             </ul>
                         </div>
                         <div class="product-category social-link align-items-center pb-0">
@@ -353,7 +363,7 @@
                              aria-labelledby="description-tab">
                             <div class="product-description-body">
                                 <p class="short-desc mb-0">
-                                    @Model.Description
+                                    @Model.Product.Description
                                 </p>
                             </div>
                         </div>
@@ -486,6 +496,78 @@
                 <div class="col-lg-12">
                     <div class="swiper-container product-slider">
                         <div class="swiper-wrapper">
+
+                            @foreach (Product product in Model.RelatedProducts)
+                            {
+                                <div class="swiper-slide product-item">
+                                    <div class="product-img">
+                                        <a asp-controller="Product" asp-action="Detail" asp-all-route-id="product.id">
+                                            <img class="primary-img"
+                                                 src="~/assets/images/website-images/@product.ProductImages.FirstOrDefault(pi=>pi.IsPrimary==true).Url"
+                                                 alt="@product.Name" />
+                                            <img class="secondary-img"
+                                                 src="~/assets/images/website-images/@product.ProductImages.FirstOrDefault(pi=>pi.IsPrimary==false).Url"
+                                                 alt="@product.Name" />
+                                        </a>
+                                        <div class="product-add-action">
+                                            <ul>
+                                                <li>
+                                                    <a href="wishlist.html"
+                                                       data-tippy="Add to wishlist"
+                                                       data-tippy-inertia="true"
+                                                       data-tippy-animation="shift-away"
+                                                       data-tippy-delay="50"
+                                                       data-tippy-arrow="true"
+                                                       data-tippy-theme="sharpborder">
+                                                        <i class="pe-7s-like"></i>
+                                                    </a>
+                                                </li>
+                                                <li class="quuickview-btn"
+                                                    data-bs-toggle="modal"
+                                                    data-bs-target="#quickModal">
+                                                    <a href="#"
+                                                       data-tippy="Quickview"
+                                                       data-tippy-inertia="true"
+                                                       data-tippy-animation="shift-away"
+                                                       data-tippy-delay="50"
+                                                       data-tippy-arrow="true"
+                                                       data-tippy-theme="sharpborder">
+                                                        <i class="pe-7s-look"></i>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="cart.html"
+                                                       data-tippy="Add to cart"
+                                                       data-tippy-inertia="true"
+                                                       data-tippy-animation="shift-away"
+                                                       data-tippy-delay="50"
+                                                       data-tippy-arrow="true"
+                                                       data-tippy-theme="sharpborder">
+                                                        <i class="pe-7s-cart"></i>
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="product-content">
+                                        <a class="product-name"
+                                           asp-controller="Product" asp-action="Detail" asp-route-id="product.id">@product.Name</a>
+                                        <div class="price-box pb-1">
+                                            <span class="new-price">$@product.Price</span>
+                                        </div>
+                                        <div class="rating-box">
+                                            <ul>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+
                             <div class="swiper-slide product-item">
                                 <div class="product-img">
                                     <a href="single-product-variable.html">
@@ -755,6 +837,7 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
