added admin panel

--- a/ProniaBackEnd/Views/Product/Detail.cshtml
+++ b/ProniaBackEnd/Views/Product/Detail.cshtml
@@ -505,7 +505,7 @@
                                             <img class="primary-img"
                                                  src="~/assets/images/website-images/@product.ProductImages.FirstOrDefault(pi=>pi.IsPrimary==true).Url"
                                                  alt="@product.Name" />
-                                            <img class="secondary-img"
+                                            <img class="secondary-img"`
                                                  src="~/assets/images/website-images/@product.ProductImages.FirstOrDefault(pi=>pi.IsPrimary==false).Url"
                                                  alt="@product.Name" />
                                         </a>
