--- a/ProniaBackEnd/Areas/Admin/Views/Category/Detail.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Category/Detail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Category
 
 <div class="col-6">
-    <p>@Model.Name</p>
+    <h2>@Model.Name</h2>
     <p>@Model.Products</p>
     <a class="btn btn-secondary" asp-controller="Category" asp-action="Index">Go Back</a>
 </div>
