--- a/ProniaBackEnd/Areas/Admin/Views/Tag/Index.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Tag/Index.cshtml
@@ -45,7 +45,7 @@
                                 <td>
                                     <a asp-action="update" asp-controller="tag" asp-route-id="@tag.Id" class="btn btn-warning btn-info"><i class="mdi mdi-grease-pencil"></i></a>
                                     <a asp-action="delete" asp-controller="tag" asp-route-id="@tag.Id" class="btn btn-danger btn-info"><i class="mdi mdi-delete"></i></a>
-                                    <a class="btn btn-primary btn-info"><i class="mdi mdi-open-in-new"></i></a>
+                                    <a asp-action="detail" asp-controller="tag" asp-route-id="@tag.Id" class="btn btn-primary btn-info"><i class="mdi mdi-open-in-new"></i></a>
                                 </td>
                             </tr>
                         }
