--- a/ProniaBackEnd/Areas/Admin/Views/Slide/Detail.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Slide/Detail.cshtml
@@ -3,5 +3,6 @@
 <div class="col-6">
     <img src="~/assets/images/slider/@Model.Image" style="width:400px; height:180px;object-fit:cover" />
     <h2>@Model.Title</h2>
-    <a class="btn btn-secondary" asp-action="Index">Go Back</a>
+    <p>@Model.Description</p>
+    <a class="btn btn-secondary" asp-action="Index" asp-controller="Slide">Go Back</a>
 </div>
