--- a/ProniaBackEnd/Areas/Admin/Views/Slide/Index.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Slide/Index.cshtml
@@ -49,9 +49,9 @@
                                     @slide.Order
                                 </td>
                                 <td>
-                                    <a asp-action="update" asp-controller="category" asp-route-id="@slide.Id" class="btn btn-warning btn-info"><i class="mdi mdi-grease-pencil"></i></a>
-                                    <a asp-action="delete" asp-controller="category" asp-route-id="@slide.Id" class="btn btn-danger btn-info"><i class="mdi mdi-delete"></i></a>
-                                    <a class="btn btn-primary btn-info"><i class="mdi mdi-open-in-new"></i></a>
+                                    <a asp-action="update" asp-controller="slide" asp-route-id="@slide.Id" class="btn btn-warning btn-info"><i class="mdi mdi-grease-pencil"></i></a>
+                                    <a asp-action="delete" asp-controller="slide" asp-route-id="@slide.Id" class="btn btn-danger btn-info"><i class="mdi mdi-delete"></i></a>
+                                    <a asp-action="detail" asp-controller="slide" asp-route-id="@slide.Id" class="btn btn-primary btn-info"><i class="mdi mdi-open-in-new"></i></a>
                                 </td>
                             </tr>
                         }
