View Model in CRUD

--- a/ProniaBackEnd/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -25,7 +25,7 @@
             <div class="navbar-brand-wrapper d-flex justify-content-center">
                 <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
                     <!--************************************* Deyiw *******************************************-->
-                    <a class="navbar-brand brand-logo" href="index.html"><img src="~/admin/images/logo.svg" alt="logo" /></a>
+                    <a class="navbar-brand brand-logo" href="index.html"><img src="~/admin/images/dark.png" alt="logo" /></a>
                     <a class="navbar-brand brand-logo-mini" href="index.html">TooGoo</a>
                     <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
                         <span class="mdi mdi-sort-variant"></span>
@@ -186,6 +186,9 @@
                                 <li class="nav-item"> <a class="nav-link" asp-controller="Category" asp-action="Index">Categories</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-controller="Slide" asp-action="Index">Slides</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-controller="Tag" asp-action="Index">Tags</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Color" asp-action="Index">Colors</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Size" asp-action="Index">Sizes</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Product" asp-action="Index">Products</a></li>
                             </ol>
                         </div>
                     </li>
