--- a/ProniaBackEnd/Areas/Admin/Views/Slide/Create.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Slide/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Slide
+﻿@model CreateSlideVM
+
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
