--- a/ProniaBackEnd/Areas/Admin/Views/Tag/Update.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Tag/Update.cshtml
@@ -1,10 +1,10 @@
-﻿@model Tag
+﻿@model UpdateTagVM
 
 
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Create Tag </h4>
+            <h4 class="card-title">Update Tag </h4>
 
             <form class="forms-sample" method="post">
                 <div class="form-group">
