--- a/ProniaBackEnd/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ProniaBackEnd.Models;
 @using ProniaBackEnd.ViewModels;
+@using ProniaBackEnd.Areas.Admin.ViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AuthoringTagHelpers
