--- a/ProniaBackEnd/Areas/Admin/Views/Slide/Update.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Slide/Update.cshtml
@@ -1,4 +1,5 @@
-﻿@model Slide
+﻿@model UpdateSlideVM
+
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
@@ -7,6 +8,12 @@
             <form class="forms-sample" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <img src="~/assets/images/slider/@Model.Image" />
+                    <input asp-for="Image" type="hidden" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label asp-for="Photo">Choose new Photo</label>
+                    <input asp-for="Photo" class="form-control" placeholder="Photo">
+                    <span class="text-danger" asp-validation-for="Photo"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Title">Title</label>
