--- a/ProniaBackEnd/Views/Home/Index.cshtml
+++ b/ProniaBackEnd/Views/Home/Index.cshtml
@@ -1908,7 +1908,7 @@
                                                  alt="@product.Name" />
                                             <img class="secondary-img"
                                                  src="~/assets/images/website-images//@product.ProductImages.FirstOrDefault(pi=>pi.IsPrimary==false).Url"
-                                                 alt="Product Images" />
+                                                 alt="@product.Name" />
                                         </a>
                                         <div class="product-add-action">
                                             <ul>
