--- a/ProniaBackEnd/Areas/Admin/Views/Category/Update.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Category/Update.cshtml
@@ -4,7 +4,7 @@
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Create Category</h4>
+            <h4 class="card-title">Update Category</h4>
 
             <form class="forms-sample" method="post">
                 <div class="form-group">
