--- a/ProniaBackEnd/Areas/Admin/Views/Size/Update.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Size/Update.cshtml
@@ -3,7 +3,7 @@
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Create Size </h4>
+            <h4 class="card-title">Update Size </h4>
 
             <form class="forms-sample" method="post">
                 <div class="form-group">
