--- a/ProniaBackEnd/Areas/Admin/Views/Product/Detail.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Product/Detail.cshtml
@@ -1,14 +1,17 @@
 ﻿@model Product
-@* <div class="col-6">
-    <img src="~/assets/images/website-images/@Model.Image" style="width:200px; height:200px;object-fit:cover" />
-    <h2>@Model.Name</h2>
-    <p>@Model.Price</p>
-    <p>@Model.SKU</p>
-    <p>@Model.Description</p>
-    <a class="btn btn-secondary" asp-controller="Size" asp-action="Index">Go Back</a>
-</div> *@
-<div class="card" style="width:18rem;max-height: 600px; ">
-        <img src="~/assets/images/website-images/@Model.Image" style="width:200px; height:200px;object-fit:cover" />
+
+
+
+<div class="card" style="max-height: 600px; ">
+    
+    <div >
+        @foreach (ProductImage pImage in Model.ProductImages)
+        {
+            <img src="~/assets/images/website-images/@pImage.Url" style="width:200px; height:200px;object-fit:cover" />
+
+        }
+    </div>
+    
 
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
@@ -34,10 +37,10 @@
                 <option value="@pTag.Tag.Name">@pTag.Tag.Name</option>
             }
         </p>
-        
+
     </div>
     <div class="card-body">
         <a class="btn btn-secondary" asp-controller="Size" asp-action="Index">Go Back</a>
     </div>
-    
+
 </div>
