Multiple File Upload Update

--- a/ProniaBackEnd/Areas/Admin/Views/Product/Update.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Product/Update.cshtml
@@ -1,4 +1,10 @@
-﻿@model UpdateProductVM
+﻿@{
+
+    ProductImage main = Model.ProductImages.FirstOrDefault(pi => pi.IsPrimary == true);
+    ProductImage hover = Model.ProductImages.FirstOrDefault(pi => pi.IsPrimary == false);
+}
+
+@model UpdateProductVM
 
 <div class="main-panel">
     <div class="content-wrapper">
@@ -11,6 +17,37 @@
 
                         <form class="forms-sample" method="post" enctype="multipart/form-data">
 
+                            <div class="form-group">
+                                <img style="width:150px;height:150px" src="~/assets/images/website-images/@main.Url" />
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="MainPhoto">Main Image</label>
+                                <input asp-for="MainPhoto" class="form-control" accept="image/*">
+                                <span class="text-danger" asp-validation-for="MainPhoto"></span>
+                            </div>
+                            <div class="form-group">
+                                <img style="width:150px;height:150px" src="~/assets/images/website-images/@hover.Url" />
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="HoverPhoto">Hover Image</label>
+                                <input asp-for="HoverPhoto" class="form-control" accept="image/*">
+                                <span class="text-danger" asp-validation-for="HoverPhoto"></span>
+                            </div>
+                            <div class="form-group d-flex">
+                                @foreach (ProductImage image in Model.ProductImages.Where(pi => pi.IsPrimary == null))
+                                {
+                                    <div class="position-relative">
+                                        <img style="width:150px;height:150px" src="~/assets/images/website-images/@image.Url" />
+                                        <button type="button" style="right:0;" class="cus-delete btn btn-danger position-absolute">X</button>
+                                        <input asp-for="ImageIds" type="hidden" value="@image.Id">
+                                    </div>
+                                }
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Photos">Additional Image </label>
+                                <input asp-for="Photos" class="form-control" accept="image/*">
+                                <span class="text-danger" asp-validation-for="Photos"></span>
+                            </div>
                             <div class="form-group">
                                 <label asp-for="Name">Name</label>
                                 <input asp-for="Name" class="form-control" placeholder="Name">
@@ -35,7 +72,6 @@
                                 <label asp-for="CategoryId">Category</label>
 
                                 <select asp-for="CategoryId" asp-items="new SelectList(Model.Categories,nameof(Category.Id),nameof(Category.Name))" class="form-control">
-                                    
                                 </select>
 
                                 <span class="text-danger" asp-validation-for="CategoryId"></span>
@@ -79,3 +115,18 @@
         </div>
     </div>
 </div>
+
+
+
+@section DeleteImages{
+    <script>
+        var btns = document.querySelectorAll("cus-delete")
+
+        for (let i = 0; i < btns.length; i++) {
+            btns[i].addEventListener("click", function () {
+                btns[i].parentElement.remove()
+            })
+        }
+
+    </script>
+}                            
