--- a/ProniaBackEnd/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -219,6 +219,7 @@
     <script src="~/admin/js/dataTables.bootstrap4.js"></script>
     <!-- End custom js for this page-->
     <script src="~/admin/js/jquery.cookie.js" type="text/javascript"></script>
+    @RenderSection("DeleteImages",false)
 </body>
 
 </html>
