--- a/ProniaBackEnd/Views/Shared/_Layout.cshtml
+++ b/ProniaBackEnd/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
     </div>
     <div class="main-wrapper">
         <!-- Begin Main Header Area -->
-        
+        @await Component.InvokeAsync("Header")
         <!-- Main Header Area End Here -->
         @RenderBody()
         <!-- Begin Footer Area -->
