--- a/ProniaBackEnd/Views/Shared/Components/Header/Default.cshtml
+++ b/ProniaBackEnd/Views/Shared/Components/Header/Default.cshtml
@@ -55,7 +55,7 @@
                 <div class="col-lg-12">
                     <div class="header-middle-wrap position-relative">
                         <div class="header-contact d-none d-lg-flex">
-                            @Html.Raw(Model["PhotoIcon"])
+                            <i class="pe-7s-call"></i>
                             <a href="tel://@Model["Phone"]">@Model["Phone"]</a>
                         </div>
 
